--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,18 +18,31 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity">
+
+        <service
+            android:name=".SendService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBKQg1X3BepUE4czgVm22k2VvYVnBVJiWE" />
+
+        <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".SelectGroupActivity" />
-        <activity
-            android:name=".GroupActivity"
-            android:label="@string/title_activity_group"></activity>
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.SelectGroupActivity" />
+        <activity android:name=".activity.GroupActivity"/>
+        <activity android:name=".activity.MapsActivity"/>
     </application>
 
 </manifest>
