--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.github.deano2390:MaterialShowcaseView:1.0.5'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.github.scribejava:scribejava-apis:2.0.1'
 }
