--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <service
             android:name=".SendService"
             android:enabled="true"
-            android:exported="true" >
-        </service>
+            android:exported="true"></service>
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -39,10 +37,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activity.CallBackActivity" android:launchMode="singleInstance">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="Callback" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.SelectGroupActivity" />
-        <activity android:name=".activity.GroupActivity"/>
-        <activity android:name=".activity.MapsActivity"/>
+        <activity android:name=".activity.GroupActivity" />
+        <activity android:name=".activity.MapsActivity" />
     </application>
 
 </manifest>
