--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,23 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 apply plugin: 'me.tatarka.retrolambda'
 
 
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
         classpath 'me.tatarka:gradle-retrolambda:2.5.0'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
@@ -23,6 +32,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "0.1a"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -45,4 +55,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.github.scribejava:scribejava-apis:2.0.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
+    compile('com.twitter.sdk.android:twitter:1.11.0@aar') {
+        transitive = true;
+    }
+    compile 'com.android.support:multidex:1.0.1'
 }
