--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme">
         <service
             android:name=".SendService"
@@ -31,21 +32,22 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBKQg1X3BepUE4czgVm22k2VvYVnBVJiWE" />
 
-        <activity android:name=".activity.SplashActivity">
+        <activity android:name=".activity.SplashActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.SelectGroupActivity" />
-        <activity android:name=".activity.GroupActivity" />
-        <activity android:name=".activity.MapsActivity" />
+        <activity android:name=".activity.LoginActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SelectGroupActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.GroupActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.MapsActivity" android:screenOrientation="portrait"/>
 
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:label="@string/app_name" />
 
